--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -51,3 +51,38 @@ body{
     border-radius: 20px !important;
     width: 50rem !important;
 }
+
+.places .row .col img {
+    width: 60px;
+    height: 80px;
+    border-radius: 15px;
+}
+
+.places .row .col h4,
+img {
+    font-size: 18px;
+    margin: 3px 5px;
+}
+
+.places .row {
+    border: 2px solid white;
+    border-radius: 5px;
+    margin: 23px 5px;
+}
+
+.places .row{
+    border: 1px white solid;
+    color: white;
+    text-shadow: none;
+
+    background-color: #212529 !important;
+}
+
+
+.ThanosMarker{
+    border-radius: 50%;
+}
+#map{
+    height: 89vh;
+    z-index: 1;
+}
